# nn-trainer

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
nn_trainer/core/: logger.py
nn_trainer/core/exceptions/: __init__.py
nn_trainer/core/loader/: base_loader.py  mini_batch_loader.py
nn_trainer/flax/: trainer.py
nn_trainer/flax/evaluator/: mean_squared_error_evaluator.py
nn_trainer/flax/loader/: base_loader.py  mini_batch_loader.py
nn_trainer/flax/loss_fn/: __init__.py  mean_squared_error.py
nn_trainer/jax/: trainer.py
nn_trainer/jax/evaluator/: base_evaluator.py  mean_squared_error_evaluator.py
nn_trainer/jax/loader/: __init__.py  mini_batch_loader.py
nn_trainer/jax/model/: regression_mlp.py
nn_trainer/torch/: trainer.py
nn_trainer/torch/evaluator/: __init__.py  base_evaluator.py  mean_squared_error_evaluator.py
nn_trainer/torch/loader/: base_loader.py  mini_batch_loader.py
nn_trainer/torch/loss_fn/: mean_squared_error.py
nn_trainer/torch/model/: __init__.py  regression_mlp.py
notebook/flax/: REGRESSION_MLP.ipynb
notebook/torch/: REGRESSION_MLP.ipynb
